--- a/ngcybermart/src/app/app.component.html
+++ b/ngcybermart/src/app/app.component.html
@@ -1,6 +1,66 @@
-<h1>CyberMart eShop</h1>
+<div class="wrapper">
 
-<app-book-list></app-book-list>
+    <div class="content">
+
+        <!-- Navigation -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <div class="container">
+                <a class="navbar-brand" href="#">CyberMart eShop</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                    aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <div class="col-md-6">
+                        <div class="row">
+                            <div class="col-md-8">
+                                <input type="text" class="form-control" placeholder="Search Books">
+                            </div>
+                            <div class="col-md-2">
+                                <button class="btn btn-primary">Search</button>
+                            </div>
+                        </div>
+                    </div>
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home
+                                <span class="sr-only">(current)</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <br />
+        <!-- Page Content -->
+        <div class="container">
+           
+            <router-outlet></router-outlet>             
+
+        </div>
+        <!-- /.container -->
+    </div>
+    <!--Content-->
+
+
+    <!-- Footer -->
+    <footer class="py-5 footer">
+        <div class="container">
+            <p class="m-0 text-center text-dark">Copyright &copy; Your Website 2019</p>
+        </div>
+        <!-- /.container -->
+    </footer>
+
+</div>
 
 <!--
 <router-outlet></router-outlet>
