--- a/ngcybermart/src/app/conponents/book-list/book-list.component.html
+++ b/ngcybermart/src/app/conponents/book-list/book-list.component.html
@@ -1,16 +1,7 @@
 <div class="row">
   <div class="col-lg-3">
 
-    <div class="list-group">
-      <a routerLink="/category/1" class="list-group-item" 
-      routerLinkActive="bg-primary text-white font-weight-bold">Web Development</a>
-      <a routerLink="/category/2" class="list-group-item" 
-      routerLinkActive="bg-primary text-white font-weight-bold">Programming</a>
-      <a routerLink="/category/3" class="list-group-item" 
-      routerLinkActive="bg-primary text-white font-weight-bold">Databases</a>
-      <a routerLink="/category/4" class="list-group-item" 
-      routerLinkActive="bg-primary text-white font-weight-bold">Administration</a>
-    </div>
+    <app-book-category></app-book-category>
 
   </div>
   <!-- /.col-lg-3 -->
@@ -18,13 +9,14 @@
   <div class="col-lg-9">
 
     <div class="row">
+
       <div class="col-lg-4 col-md-6 mb-4" *ngFor="let book of books">
         <div class="card h-100">
-          <a href="#"><img class="card-img-top img-responsive" [src]="book.imageUrl"></a>
+          <a routerLink="/books/{{book.id}}"><img class="card-img-top img-responsive" [src]="book.imageUrl"></a>
           <div class="card-body">
             <h6 class="card-title">
-              <a href="#">{{book.name}}</a></h6>
-            <h6>{{book.unitPrice | currency: "USD"}}</h6>
+              <a routerLink="/books/{{book.id}}">{{book.name}}</a></h6>
+            <h6>{{book.unitPrice | currency: "&#8358;" }}</h6>
             <p class="card-text text-truncate" data-bind="text: text()" style="max-width: 200px">{{book.description}}
             </p>
           </div>
@@ -33,9 +25,41 @@
           </div>
         </div>
       </div>
+      <div *ngIf="books?.length == 0" class="col-md-12 alart alert-warning mt-3">
+        No Books Found!
+      </div>
     </div>
+    <div class="row">
 
+      <!-- handle page size -->
+      <div class="col-md-6">
+        <div class="row">
+          <div class="col-4">
+            <span class="mr-2">Page size</span>
+          </div>
+          <div class="col-8">
+            <select (change)="updatePageSize($event.target.value)" class="form-control-sm" style="width: 20%;">
+              <option selected>5</option>
+              <option>10</option>
+              <option>20</option>
+              <option>50</option>
+            </select>
+          </div>
+        </div>
+      </div>
+      <!-- handle Pagination -->
+      <div class="col-md-6">
 
+        <!-- <jw-pagination [items]="books" (changePage)="pageClick($event)" [pageSize]="pageSize"></jw-pagination> -->
+        <ngb-pagination [(page)]="currentPage" [pageSize]="pageSize" [collectionSize]="totalRecords"
+          (pageChange)="listBooks()" class="d-flex justify-content-end">
+          <ng-template ngbPaginationPrevious>Prev</ng-template>
+          <ng-template ngbPaginationNext>Next</ng-template>
+          <ng-template ngbPaginationFirst>First</ng-template>
+          <ng-template ngbPaginationLast>Last</ng-template>
+        </ngb-pagination>
+      </div>
+    </div>
   </div>
 </div>
 
